updating the notebook about matches and tournaments + run all notebooks

--- a/1. Introduction.ipynb
+++ b/1. Introduction.ipynb
@@ -25,15 +25,20 @@
     "\n",
     "Game theory has grown into a complex and multi-branched subject over the years due to the applications it has offered to real world problems. It has provided scholars of mathematics, psycholy, politics, philosophy and  economics with a powerful tool for understanding a wide variety of problems for their disciplines.\n",
     "\n",
-    "There are two main focuses of study in non cooperative Game Theory and there are various pieces of softwares for each discipline:\n",
+    "There are various pieces of softwares for different disciplines of non cooperative Game Theory:\n",
     "\n",
-    "1. The study of what is called a [Nash Equilibrium](https://en.wikipedia.org/wiki/Nash_equilibrium)\n",
+    "1. The study of [Nash Equilibria](https://en.wikipedia.org/wiki/Nash_equilibrium)\n",
     "    - Gambit (a piece of software with a Python interface): http://gambit.sourceforge.net/\n",
     "    - Cocalc.com (using Sagemath). Documentation: https://doc.sagemath.org/html/en/reference/game_theory/index.html\n",
     "    - Nashpy. Documentation: https://nashpy.readthedocs.io/en/latest/\n",
     "\n",
+    "\n",
     "2. Iterated Games\n",
     "    - Axelrod Python library: https://github.com/Axelrod-Python/Axelrod\n",
+    "  \n",
+    "\n",
+    "3. Evolutionary Dynamics\n",
+    "   - EGTtools: https://egttools.readthedocs.io/en/latest/index.html\n",
     "\n",
     "In this workshop we will concern ourselves with the discipline of Iterated Games. Specifically, we will be using the Axelrod Python Library which will help us study an example known as the Iterated Prisoner's Dilemma (IPD).\n",
     "In the following sections, we will familiarize ourselves with the IPD and the library. Once we cover the basics\n",
@@ -97,6 +102,13 @@
     "\n",
     "We will now move to the next section where we will look at matches and tournaments."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -116,9 +128,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
