--- a/3. Writing a Strategy.ipynb
+++ b/3. Writing a Strategy.ipynb
@@ -26,6 +26,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class TitForTat(axl.Player):\n",
     "    \"\"\"\n",
     "    A player starts by cooperating and then mimics previous move by\n",
@@ -141,7 +150,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "source": [
     "Contributing to the library\n",
@@ -153,7 +165,7 @@
    "metadata": {},
    "source": [
     "Anyone interested in contributing to the library should check the various tutorials for doing so at the documentation\n",
-    "found here: http://axelrod.readthedocs.io/en/latest/tutorials/contributing/index.html?highlight=contributing"
+    "found here: https://axelrod.readthedocs.io/en/stable/how-to/contributing/index.html"
    ]
   },
   {
@@ -204,8 +216,23 @@
     "    'manipulates_state': False\n",
     "}\n",
     "```\n",
-    "This helps classify the strategy as described in Classification (http://axelrod.readthedocs.io/en/latest/tutorials/advanced/classification_of_strategies.html#classification-of-strategies) of strategies."
+    "This helps classify the strategy as described in Classification (https://axelrod.readthedocs.io/en/stable/how-to/classify_strategies.html) of strategies."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can find a list of available strategies to implement in [this issue](https://github.com/Axelrod-Python/Axelrod/issues/379).  \n",
+    "Alternatively, if you already know of a strategy that isn’t listed there, feel free to comment on the issue or open a new one."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -225,9 +252,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
